1. Сделать систему регистрации с именем пользователя и емейлом, а так же возрастом и полом. 2. сделать создание пользователей в автозаполнении базы данных в инициализаторе ( Admin и если хотите другие ), и создать необходимые роли 3. На главной странице вывести информацию по пользователю. Логин, возраст, пол. и приветствие ему. А так же является ли он админом сайта. 4. сделать так что бы новые сообщения мог добавлять только админ ( и к странице, и к ссылке ) 5. добавить пользователя в комментарии и сообщения ( и выводить их ) 6. комментарии может редактировать только тот пользователь который их написал или админ

--- a/AspNet/Views/Home/Index.cshtml
+++ b/AspNet/Views/Home/Index.cshtml
@@ -16,7 +16,10 @@
 <br />
 <br />
 
-@if ( User.Identity != null && User.Identity.IsAuthenticated )
+
+
+
+@if (User.Identity != null && User.Identity.IsAuthenticated)
 {
     <b>@User.Identity.Name</b>
     if ( User.IsInRole("admin") )
@@ -26,10 +29,21 @@
     }
     else
     {
+        <br />
         <b>Приветствую Вас, Пользователь!</b>
     }
+    <br />
+
+    <b>Вам @ViewData["Age"] лет</b>
+    <br />
+    <b>Ваша почта: @ViewData["MyEmail"]</b>
+    <br />
+    <b>Ваш пол: @ViewData["Pol"] </b>
+
+
 }
 else
 {
+    <br />
     <b>Приветствую Вас, Гость!</b>
 }
