--- a/AspNet/Views/Shared/_Layout.cshtml
+++ b/AspNet/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Homework 3", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
                     <li>@Html.ActionLink("Мой блог", "Index", "Messages")</li>
                 </ul>
 
