Не работает PartialView

--- a/AspNet/Views/Home/Index.cshtml
+++ b/AspNet/Views/Home/Index.cshtml
@@ -47,3 +47,10 @@ else
     <br />
     <b>Приветствую Вас, Гость!</b>
 }
+
+<hr />
+
+<h1>Ajax - чемпион!</h1>
+:)
+<br />
+@Html.ActionLink("AjaxTest", "AjaxTest", "Home")
