--- a/AspNet/Views/Shared/_Layout.cshtml
+++ b/AspNet/Views/Shared/_Layout.cshtml
@@ -11,9 +11,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/datepicker")
     @Styles.Render( "~/Content/datepicker")
-
-
-
+    @Scripts.Render("~/Scripts/jquery.jquery.unobtrusive-ajax.min.js")
 
 </head>
 <body>
