--- a/AspNet/Views/Home/_StrTest.cshtml
+++ b/AspNet/Views/Home/_StrTest.cshtml
@@ -1,4 +1,14 @@
-﻿
+﻿@{ 
 
+    string str = "";
+    char[] str2 = ViewBag.str1.ToCharArray();
+
+    for (int i = ViewBag.str1.Length - 1; i >= 0; i--)
+    {
+        str = str + str2[i].ToString();
+    }
+
+    ViewBag.str1 = str;
+}
 
 @ViewBag.str1
